<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.amk.me.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.SignInFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/appName"
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32dp"
            android:text="@string/app_name"
            android:textColor="@color/primaryColor"
            android:textSize="128sp"
            app:fontFamily="@font/nabla"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:onClick="navigateToSignUp"
            android:text="@string/signup"
            android:enabled="@{viewmodel.canTouchUiSignIn}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:onClick="@{() ->viewmodel.signIn()}"
            android:text="@string/signin"
            android:enabled="@{viewmodel.canTouchUiSignIn}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:enabled="@{viewmodel.canTouchUiSignIn}"
            android:layout_marginEnd="@dimen/_16dp"
            app:errorEnabled="@{viewmodel.emailErrorState}"

            app:setErrorText="@{viewmodel.emailErrorMessage}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:onTextChanged="@{() -> viewmodel.rememberEmail(emailEditText)}"


                android:text="@{viewmodel.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            app:errorEnabled="@{viewmodel.passwordErrorState}"

            app:setErrorText="@{viewmodel.passwordErrorMessage}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:enabled="@{viewmodel.canTouchUiSignIn}"
                android:inputType="textPassword"
                android:onTextChanged="@{() -> viewmodel.rememberPassword(passwordEditText)}"
                android:text="@{viewmodel.password}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:checked="@{viewmodel.rememberMe}"
            android:onCheckedChanged="@{() -> viewmodel.rememberMeChanged(checkBox)}"
            android:text="@string/keep_me_online"
            android:enabled="@{viewmodel.canTouchUiSignIn}"
            app:layout_constraintStart_toStartOf="@id/passwordInputLayout"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toTopOf="@id/signInButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:myVisibility="@{viewmodel.onDoTask}" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>